--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,7 @@ header {
 
 .brand img {
     height: 25px;
+    width: 35px;
 }
 
 h1 {
