--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,7 +4,6 @@
 }
 
 .portfolio-container {
-    font-family: "Lato", sans-serif;
     margin-inline: 10rem;
     text-align: center;
 }
